--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "description": "Responsive portfolio website",
   "main": "index.js",
-  "homepage": "https:/Braillon7.github.io/crackingmycode",
+  "homepage": "https:/nasirwatts.github.io/myoldsite",
   "scripts": {
     "sass": "node-sass -w scss/ -o dist/css/ --recursive",
     "deploy": "gh-pages -d dist"
   },
-  "author": "William Watts",
+  "author": "Nasir Watts",
   "license": "MIT",
   "dependencies": {
     "gh-pages": "^2.0.1",
